// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearGenomeView genome view component renders one track, no blocks 1`] = `
<div
  class="makeStyles-root-198"
>
  <div
    class="makeStyles-linearGenomeView-199"
    style="display: grid; position: relative; grid-template-rows: [header] auto  [scale-bar] auto [track-foo] 20px [resize-foo] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar-203"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-212"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-212"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis-206"
      >
        <p
          class="MuiTypography-root makeStyles-viewName-208 MuiTypography-body1"
        />
      </div>
      <div
        class="makeStyles-spacer-204"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-searchRoot-207 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input-211"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-212"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          id="select-refseq"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="refseq"
          type="hidden"
          value="Select refSeq"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        class="makeStyles-container-341"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="zoom_out"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root makeStyles-slider-342"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="zoom_in"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer-204"
      />
    </div>
    <div
      class="makeStyles-controls-200 makeStyles-viewControls-201"
      style="grid-row: scale-bar;"
    />
    <div
      class="Rubberband-rubberBandContainer-363"
      data-testid="rubberband_container"
      role="presentation"
    >
      <div
        class="makeStyles-scaleBar-364"
      />
    </div>
    <div
      class="makeStyles-controls-200 makeStyles-trackControls-202"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-368"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton-369 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root makeStyles-trackName-366 MuiTypography-body1"
      >
        Foo Track
      </p>
      <span
        class="MuiTypography-root makeStyles-trackDescription-367 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-376"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="Track-track-377"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="makeStyles-trackBlocks-378"
          data-testid="Block"
        />
      </div>
    </div>
    <div
      class="makeStyles-horizontalHandle-381"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2; background: rgb(204, 204, 204); box-sizing: border-box; border-top: 1px solid #fafafa;"
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders two tracks, two regions 1`] = `
<div
  class="makeStyles-root-412"
>
  <div
    class="makeStyles-linearGenomeView-413"
    style="display: grid; position: relative; grid-template-rows: [header] auto  [scale-bar] auto [track-foo] 20px [resize-foo] 3px [track-bar] 20px [resize-bar] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar-417"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-426"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-426"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis-420"
      >
        <p
          class="MuiTypography-root makeStyles-viewName-422 MuiTypography-body1"
        />
      </div>
      <div
        class="makeStyles-spacer-418"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-searchRoot-421 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input-425"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-426"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          id="select-refseq"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="refseq"
          type="hidden"
          value="Select refSeq"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        class="makeStyles-container-555"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="zoom_out"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root makeStyles-slider-556"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="zoom_in"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer-418"
      />
    </div>
    <div
      class="makeStyles-controls-414 makeStyles-viewControls-415"
      style="grid-row: scale-bar;"
    />
    <div
      class="Rubberband-rubberBandContainer-577"
      data-testid="rubberband_container"
      role="presentation"
    >
      <div
        class="makeStyles-scaleBar-578"
      >
        <div
          class="makeStyles-block-580 makeStyles-leftBorder-581 makeStyles-rightBorder-582"
          style="left: 0px; width: 100px;"
        >
          <svg
            height="32"
            width="100"
          >
            <line
              class="makeStyles-majorTick-584"
              data-bp="-1"
              stroke="#555"
              stroke-width="1"
              x1="-1"
              x2="-1"
              y1="0"
              y2="6"
            />
            <line
              class="makeStyles-minorTick-585"
              data-bp="19"
              stroke="#999"
              stroke-width="1"
              x1="19"
              x2="19"
              y1="0"
              y2="4"
            />
            <line
              class="makeStyles-minorTick-585"
              data-bp="39"
              stroke="#999"
              stroke-width="1"
              x1="39"
              x2="39"
              y1="0"
              y2="4"
            />
            <line
              class="makeStyles-minorTick-585"
              data-bp="59"
              stroke="#999"
              stroke-width="1"
              x1="59"
              x2="59"
              y1="0"
              y2="4"
            />
            <line
              class="makeStyles-minorTick-585"
              data-bp="79"
              stroke="#999"
              stroke-width="1"
              x1="79"
              x2="79"
              y1="0"
              y2="4"
            />
            <line
              class="makeStyles-majorTick-584"
              data-bp="99"
              stroke="#555"
              stroke-width="1"
              x1="99"
              x2="99"
              y1="0"
              y2="6"
            />
            <line
              class="makeStyles-minorTick-585"
              data-bp="119"
              stroke="#999"
              stroke-width="1"
              x1="119"
              x2="119"
              y1="0"
              y2="4"
            />
            <text
              class="makeStyles-majorTickLabel-583"
              dominant-baseline="hanging"
              style="font-size: 11px;"
              x="-4"
              y="7"
            >
              0
            </text>
            <text
              class="makeStyles-majorTickLabel-583"
              dominant-baseline="hanging"
              style="font-size: 11px;"
              x="96"
              y="7"
            >
              100
            </text>
          </svg>
        </div>
        <div
          class="makeStyles-refLabel-579"
        >
          ctgA
        </div>
      </div>
    </div>
    <div
      class="makeStyles-controls-414 makeStyles-trackControls-416"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-590"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton-591 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root makeStyles-trackName-588 MuiTypography-body1"
      >
        Foo Track
      </p>
      <span
        class="MuiTypography-root makeStyles-trackDescription-589 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-598"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="Track-track-599"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="makeStyles-trackBlocks-600"
          data-testid="Block"
        >
          <div
            class="makeStyles-block-580 makeStyles-leftBorder-581 makeStyles-rightBorder-582"
            style="left: 0px; width: 100px;"
          >
            <div
              class="makeStyles-blockMessage-605"
            >
              region assembly does not match track assembly
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-horizontalHandle-606"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2; background: rgb(204, 204, 204); box-sizing: border-box; border-top: 1px solid #fafafa;"
    />
    <div
      class="makeStyles-controls-414 makeStyles-trackControls-416"
      style="grid-row: track-bar; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-590"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton-591 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root makeStyles-trackName-588 MuiTypography-body1"
      >
        Bar Track
      </p>
      <span
        class="MuiTypography-root makeStyles-trackDescription-589 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-598"
      role="presentation"
      style="grid-row: track-bar; grid-column: blocks;"
    >
      <div
        class="Track-track-599"
        data-testid="track-testConfig2"
        role="presentation"
      >
        <div
          class="makeStyles-trackBlocks-600"
          data-testid="Block"
        >
          <div
            class="makeStyles-block-580 makeStyles-leftBorder-581 makeStyles-rightBorder-582"
            style="left: 0px; width: 100px;"
          >
            <div
              class="makeStyles-blockMessage-605"
            >
              region assembly does not match track assembly
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-horizontalHandle-606"
      role="presentation"
      style="grid-row: resize-bar; grid-column: span 2; background: rgb(204, 204, 204); box-sizing: border-box; border-top: 1px solid #fafafa;"
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders with an empty model 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="makeStyles-linearGenomeView-2"
    style="display: grid; position: relative; grid-template-rows: [header] auto  [scale-bar] auto; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar-6"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis-9"
      >
        <p
          class="MuiTypography-root makeStyles-viewName-11 MuiTypography-body1"
        />
      </div>
      <div
        class="makeStyles-spacer-7"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-searchRoot-10 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input-14"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          id="select-refseq"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="refseq"
          type="hidden"
          value="Select refSeq"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        class="makeStyles-container-144"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="zoom_out"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root makeStyles-slider-145"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="zoom_in"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer-7"
      />
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-viewControls-4"
      style="grid-row: scale-bar;"
    />
    <div
      class="Rubberband-rubberBandContainer-166"
      data-testid="rubberband_container"
      role="presentation"
    >
      <div
        class="makeStyles-scaleBar-167"
      />
    </div>
  </div>
</div>
`;
